--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ img {
   margin: 0 auto;
 }
 
-.stepDiv {
+/* .stepDiv {
   border: 1px solid #ccc;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -46,4 +46,4 @@ img {
   font-size: 16px;
   margin: 0;
   text-align: center;
-}
+} */
